# jsonrpsee-server-template

./: .gitignore  Cargo.toml  README.md
script/: client.sh  gen_entity.sh  server.sh
src/: entity.rs  lib.rs  main.rs  query.rs
